--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -1,64 +1,142 @@
 ---
 ---
 
-@string{aps = {American Physical Society,}}
+@string{aps = {Computer Vision Center,}}
 
-@book{einstein1956investigations,
-  title={Investigations on the Theory of the Brownian Movement},
-  author={Einstein, Albert},
-  year={1956},
-  publisher={Courier Corporation,}
+@article{nicolaou2018non,
+  title={Non-deterministic Behavior of Ranking-based Metrics when Evaluating Embeddings},
+  author={Nicolaou, Anguelos and Dey, Sounak and Christlein, Vincent and Maier, Andreas and Karatzas, Dimosthenis},
+  journal={arXiv preprint arXiv:1806.07171},
+  year={2018}
 }
 
-@article{einstein1950meaning,
-  title={The meaning of relativity},
-  author={Einstein, Albert and Taub, AH},
-  journal={American Journal of Physics,},
-  volume={18},
+
+@inproceedings{dey2018learning,
+  title={Learning Cross-Modal Deep Embeddings for Multi-Object Image Retrieval using Text and Sketch},
+  author={Dey, Sounak and Dutta, Anjan and Ghosh, Suman K and Valveny, Ernest and Llad{\'o}s, Josep and Pal, Umapada},
+  booktitle={2018 24th International Conference on Pattern Recognition (ICPR)},
+  pages={916--921},
+  year={2018},
+  organization={IEEE}
+}
+   
+@inproceedings{dey2017bringing,
+  title={Bringing Back Hieroglyph},
+  author={Dey, Sounak and Dutta, Anjan and Llad{\'o}s, Josep and Pal, Umapada},
+  booktitle={2017 14th IAPR International Conference on Document Analysis and Recognition (ICDAR)},
+  volume={2},
+  pages={33--34},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{dey2017shallow,
+  title={Shallow Neural Network Model for Hand-Drawn Symbol Recognition in Multi-Writer Scenario},
+  author={Dey, Sounak and Dutta, Anjan and Llad{\'o}s, Josep and Forn{\'e}s, Alicia and Pal, Umapada},
+  booktitle={2017 14th IAPR International Conference on Document Analysis and Recognition (ICDAR)},
+  volume={2},
+  pages={31--32},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{toledo2017handwriting,
+  title={Handwriting recognition by attribute embedding and recurrent neural networks},
+  author={Toledo, J Ignacio and Dey, Sounak and Forn{\'e}s, Alicia and Llad{\'o}s, Josep},
+  booktitle={2017 14th IAPR International Conference on Document Analysis and Recognition (ICDAR)},
+  volume={1},
+  pages={1038--1043},
+  year={2017},
+  organization={IEEE}
+}
+
+@inproceedings{riba2017improving,
+  title={Improving Information Retrieval in Multiwriter Scenario by Exploiting the Similarity Graph of Document Terms},
+  author={Riba, Pau and Dutta, Anjan and Dey, Sounak and Llad{\'o}s, Josep and Forn{\'e}s, Alicia},
+  booktitle={2017 14th IAPR International Conference on Document Analysis and Recognition (ICDAR)},
+  volume={1},
+  pages={475--480},
+  year={2017},
+  organization={IEEE}
+}
+
+@article{dey2017signet,
+  title={Signet: Convolutional siamese network for writer independent offline signature verification},
+  author={Dey, Sounak and Dutta, Anjan and Toledo, J Ignacio and Ghosh, Suman K and Llad{\'o}s, Josep and Pal, Umapada},
+  journal={arXiv preprint arXiv:1707.02131},
+  year={2017}
+}
+
+@article{dey2017script,
+  title={Script independent approach for multi-oriented text detection in scene image},
+  author={Dey, Sounak and Shivakumara, Palaiahnakote and Raghunandan, KS and Pal, Umapada and Lu, Tong and Kumar, G Hemantha and Chan, Chee Seng},
+  journal={Neurocomputing},
+  volume={242},
+  pages={96--112},
+  year={2017},
+  publisher={Elsevier}
+}
+
+@inproceedings{dey2016local,
+  title={Local binary pattern for word spotting in handwritten historical document},
+  author={Dey, Sounak and Nicolaou, Anguelos and Llados, Josep and Pal, Umapada},
+  booktitle={Joint IAPR International Workshops on Statistical Techniques in Pattern Recognition (SPR) and Structural and Syntactic Pattern Recognition (SSPR)},
+  pages={574--583},
+  year={2016},
+  organization={Springer}
+}
+
+
+@article{giri2016effect,
+  title={Effect of temperature on the complexity of solid Argon system},
+  author={Giri, A and Dey, S and Barat, P},
+  journal={Indian Journal of Physics},
+  volume={90},
   number={6},
-  pages={403--404},
-  year={1950},
-  publisher={American Association of Physics Teachers,}
+  pages={725--732},
+  year={2016},
+  publisher={Springer}
 }
 
-@article{PhysRev.47.777,
-  title={Can Quantum-Mechanical Description of Physical Reality Be Considered Complete?},
-  author={Einstein, A. and Podolsky, B. and Rosen, N.},
-  abstract={In a complete theory there is an element corresponding to each element of reality. A sufficient condition for the reality of a physical quantity is the possibility of predicting it with certainty, without disturbing the system. In quantum mechanics in the case of two physical quantities described by non-commuting operators, the knowledge of one precludes the knowledge of the other. Then either (1) the description of reality given by the wave function in quantum mechanics is not complete or (2) these two quantities cannot have simultaneous reality. Consideration of the problem of making predictions concerning a system on the basis of measurements made on another system that had previously interacted with it leads to the result that if (1) is false then (2) is also false. One is thus led to conclude that the description of reality as given by a wave function is not complete.},
-  journal={Phys. Rev.,},
-  volume={47},
-  issue={10},
-  pages={777--780},
-  numpages={0},
-  year={1935},
-  month={May},
-  publisher=aps,
-  doi={10.1103/PhysRev.47.777},
-  url={http://link.aps.org/doi/10.1103/PhysRev.47.777}
+
+@article{dey2016evaluation,
+  title={Evaluation of the Effect of Improper Segmentation on Word Spotting},
+  author={Dey, Sounak and Nicolaou, Anguelos and Llados, Josep and Pal, Umapada},
+  journal={arXiv preprint arXiv:1604.06243},
+  year={2016}
 }
 
-@article{einstein1905molekularkinetischen,
-  title={{\"U}ber die von der molekularkinetischen Theorie der W{\"a}rme geforderte Bewegung von in ruhenden Fl{\"u}ssigkeiten suspendierten Teilchen},
-  author={Einstein, A.},
-  journal={Annalen der physik,},
-  volume={322},
-  number={8},
-  pages={549--560},
-  year={1905},
-  publisher={Wiley Online Library}
+@article{das2014design,
+  title={Design of miniature coil to generate uniform magnetic field},
+  author={Das, Nilangshu K and Barat, Parthasarathi and Dey, Sounak and Jayakumar, Tammana},
+  journal={Progress In Electromagnetics Research},
+  volume={34},
+  pages={99--105},
+  year={2014},
+  publisher={EMW Publishing}
 }
 
-@article{einstein1905movement,
-  title={Un the movement of small particles suspended in statiunary liquids required by the molecular-kinetic theory 0f heat},
-  author={Einstein, A.},
-  journal={Ann. Phys.,},
-  volume={17},
-  pages={549--560},
-  year={1905}
+
+@article{das2013innovative,
+  title={Innovative instrumentation to measure magnetic susceptibility},
+  author={Das, Nilangshu K and Dey, Sounak and Pal, Sarbajit and Barat, Parthasarathi},
+  journal={IEEE Transactions on Magnetics},
+  volume={49},
+  number={9},
+  pages={4965--4969},
+  year={2013},
+  publisher={IEEE}
 }
 
-@article{einstein1905electrodynamics,
-  title={On the electrodynamics of moving bodies},
-  author={Einstein, A.},
-  year={1905}
-}
+
+
+
+
+
+
+
+
+
+
+
+
